[package]
name = "airs-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
hound = "3.5.1"
ogg = "0.9.2"
opus2 = { version = "0.4.0", default-features = false, features = ["backend-mousiki"] }
symphonia = { version = "0.5.4", features = ["aac", "flac", "isomp4", "mp3", "pcm", "vorbis", "wav"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
